--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-Overview of Changes from GTK+ 2.4.4 to GTK+ 2.4.5 (up to #149620)
+Overview of Changes from GTK+ 2.4.4 to GTK+ 2.4.6
 =================================================
 * GtkFileChooser
  - Set busy cursor while mounting [Federico Mena Quintero]
@@ -21,6 +21,7 @@ Overview of Changes from GTK+ 2.4.4 to GTK+ 2.4.5 (up to #149620)
    files [Magnus Bergman]
  - Handle edge pixels consistently [Brian Cameron, 
    Matthias]
+ - Handle OS/2 BMPs [Jon-Kare Hellan]
 * Bug fixes for Copy-Paste behaviour in text widgets 
   [Mikael Hallendal, Scott Bronson]
 * Memory leak fixes in multiple widgets [Kjartan Maraas, 
@@ -29,13 +30,14 @@ Overview of Changes from GTK+ 2.4.4 to GTK+ 2.4.5 (up to #149620)
 * Other bug fixes [John Cupitt, Elke Meier, Matthias, 
   Peter Zelezny, Guilherme Salgado, John Finlay, Tommi,
   Padaig, Olivier Sessink, Nicolas Deves, Lorenzo Gil 
-  Sanchez, Christian Persch, Morten Welinder, Markku Vire]
+  Sanchez, Christian Persch, Morten Welinder, Markku Vire,
+  Markus Lausser]
 * Documentation improvements [Owen Taylor, Matthias, Axel 
   Simon, David, Federico, Mariano Suarez-Alvarez]
 * Updated translations (ang,az,bg,br,ca,cs,en_CA,es,fi,fr,hi,hu,
   it,ja,ko,mn,nb,nl,no,pl,pt,pt_BR,ru,sq,sr,sr@Latn,sr@ije,sv,uz,
   wa,zh_CN)
-(142805,116789,147399,147405,147476,139376,147399,144405,126295,147656,122427,60128,58307,144706,147911,147913,147926,148035,148064,148073,148089,148128,148134,148135,141804,147965,148589,148585,148789,148879,148978,149011,148686,148868,149191,149195,149077,148715,141809,144232,106992,149404,148526,148702,149836,149422,143457,149620,148518,111922,149470)
+(142805,116789,147399,147405,147476,139376,147399,144405,126295,147656,122427,60128,58307,144706,147911,147913,147926,148035,148064,148073,148089,148128,148134,148135,141804,147965,148589,148585,148789,148879,148978,149011,148686,148868,149191,149195,149077,148715,141809,144232,106992,149404,148526,148702,149836,149422,143457,149620,148518,111922,149470,149547,150003)
 
 Overview of Changes from GTK+ 2.4.3 to GTK+ 2.4.4
 =================================================
