--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2004-08-13  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkfilechooserdefault.c (gtk_file_chooser_default_style_set): 
+	Don't install the settings_notify_cb from here, since it
+	may be called before the first screen_changed signal, 
+	confusing the logic in gtk_file_chooser_screen_changed().
+	(#148803, Abel Daniel)
+
+	* gtk/gtktreeview.c (gtk_tree_view_row_changed): 
+	Make it compile.
+	
 Fri Aug 13 01:25:55 2004  Matthias Clasen  <maclas@gmx.de>
 
 	* NEWS: Updates.
