--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Aug 14 23:00:25 2004  Soeren Sandmann  <sandmann@daimi.au.dk>
+
+	* configure.in: Bump version number
+
 Sat Aug 14 19:15:08 2004  Soeren Sandmann  <sandmann@daimi.au.dk>
 
 	* === Released 2.4.7 ===
