--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-15  Sami Pesonen  <sampeson@iki.fi>
+
+	* fi.po: Updated Finnish translation.
+
 Sat Aug 14 19:15:08 2004  Soeren Sandmann  <sandmann@daimi.au.dk>
 
 	* === Released 2.4.7 ===
