--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sun Aug 15 02:31:55 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk/gtkfilesystemunix.c (get_icon_type_from_stat): Make 
+	the use of S_ISFIFO and S_ISSOCK conditional.  (#150146,
+	Gustavo Carneiro)
+
 Sat Aug 14 23:00:25 2004  Soeren Sandmann  <sandmann@daimi.au.dk>
 
 	* configure.in: Bump version number
