--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-16  Christian Rose  <menthos@menthos.com>
+
+	* configure.in: Added "bs" to ALL_LINGUAS.
+
 Mon Aug 16 01:03:08 2004  Matthias Clasen  <maclas@gmx.de>
 
 	* gtk/gtktextiter.c (gtk_text_iter_set_visible_line_offset): 
