--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-16  Christian Rose  <menthos@menthos.com>
+
+	* bs.po: Added Bosnian translation by
+	Kenan Hadžiavdić <kenanh@frisurf.no>.
+
 Sat Aug 14 19:15:08 2004  Soeren Sandmann  <sandmann@daimi.au.dk>
 
 	* === Released 2.4.7 ===
