--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-18  Sami Pesonen  <sampeson@iki.fi>
+
+	* fi.po: Updated Finnish translation after QA review.
+
 2004-08-16  Christian Rose  <menthos@menthos.com>
 
 	* bs.po: Added Bosnian translation by
