Updated Danish translation.
        * da.po: Updated Danish translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-18  Martin Willemoes Hansen  <mwh@sysrq.dk>
+
+	* da.po: Updated Danish translation.
+
 2004-08-16  Christian Rose  <menthos@menthos.com>
 
 	* bs.po: Added Bosnian translation by
