--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-18  Laurent Dhima  <laurenti@alblinux.net>
+
+	* sq.po: Updated Albanian translation.
+
 2004-08-18  Sami Pesonen  <sampeson@iki.fi>
 
 	* fi.po: Updated Finnish translation after QA review.
